- improve accidental scrolling on mobile (prevent swipe down to refresh page by accident)

--- a/src/components/Popup/styles.module.scss
+++ b/src/components/Popup/styles.module.scss
@@ -46,6 +46,7 @@
     flex-direction: column;
     justify-content: center;
     overflow: auto;
+    pointer-events: none;
 
     &.signUpNotificationPopupContainer,
     &.welcomeContainer,
